--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
         }
         
         .bg {
-            background: linear-gradient(to right top, rgba(38, 50, 105, 0.78), rgba(255, 152, 0, 0.45)), url(/beijing.jpg) center center no-repeat;
+            background: linear-gradient(to right top, rgba(38, 50, 105, 0.78), rgba(255, 152, 0, 0.45)), url(/musicAPI/beijing.jpg) center center no-repeat;
             background-size: cover;
             filter: blur(2px);
             position: absolute;
@@ -59,7 +59,7 @@
         }
         
         .musicimg {
-            background: url(/beijing1.jpeg) center center no-repeat;
+            background: url(/musicAPI/beijing1.jpeg) center center no-repeat;
             background-size: cover;
             height: 400px;
         }
