--- a/music.html
+++ b/music.html
@@ -152,10 +152,10 @@
         }
         
         .fa-music {
-            color: red;
-            opacity: 0.5;
+            color: blue;
+            opacity: 0.3;
             margin-top: 10px;
-            font-size:15px;
+            font-size:20px;
         }
         
         .sort {
