--- a/music.html
+++ b/music.html
@@ -65,7 +65,7 @@
             height: 250px;
             border:3px solid #f37b8s;
             border-radius:8px;
-             box-shadow: 2px 3px 4px #fff;
+             box-shadow: 2px 3px 4px #111;
         }
         
         .fa-forward {
