--- a/music.html
+++ b/music.html
@@ -481,7 +481,7 @@
                 $('.fa-music').classList.remove('fa-spin')
             }
         }
-        var time = setTimeout(function() {
+        var time = setInterval(function() {
             $('.sort').style.display = 'none'
             $('.panalplay').style.display = 'none'
             $('.unactive').style.display = 'block'
