--- a/music.html
+++ b/music.html
@@ -492,7 +492,7 @@
 
         time
         window.onclick = window.onmousemove = window.onmouseup = window.onmousedown = function() {
-            cleartimeout(time)
+            clearInterval(time)
 
         }
         window.onmousemove = function() {
