--- a/music.html
+++ b/music.html
@@ -218,8 +218,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            height: 400px;
-            width: 400px;
+            height: 300px;
+            width: 300px;
         }
         
         .unactive .mes {
@@ -491,7 +491,7 @@
 
 
         time
-        window.onclick = window.onmousemove = window.onmouseup = window.onmousedown = function() {
+        window.onclick = window.onmousemove = function() {
             clearInterval(time)
 
         }
