--- a/music.html
+++ b/music.html
@@ -489,7 +489,7 @@
 
 
         time
-        window.onclick = window.onmousemove = function() {
+        window.onclick  = function() {
             clearInterval(time)
 
         }
