--- a/music.html
+++ b/music.html
@@ -489,7 +489,7 @@
 
 
         time
-        window.onclick  = function() {
+        window.onclick=window.onmousemove=window.onmousedown=window.onmouseup=window.ondbclick  = function() {
             clearInterval(time)
 
         }
