--- a/music.html
+++ b/music.html
@@ -489,10 +489,10 @@
 
 
         time
-        window.onclick=window.onmousemove=window.onmousedown=window.onmouseup=window.ondbclick  = function() {
-            clearInterval(time)
+       // window.onclick=window.onmousemove=window.onmousedown=window.onmouseup=window.ondbclick  = function() {
+       //     clearInterval(time)
 
-        }
+       // }
         window.onmousemove = function() {
 
             $('.unactive').style.display = 'none'
