--- a/music.html
+++ b/music.html
@@ -100,6 +100,8 @@
             padding: 5px 25px;
             background: blue;
             border-radius: 4px;
+            opacity:0.5
+            font-size:25px;
         }
         
         .music-mes h2 {
