--- a/music.html
+++ b/music.html
@@ -495,7 +495,7 @@
            clearInterval(time)
 
         }
-        $('.unactive').onmousemove = function() {
+        window.onmousemove = function() {
 
             $('.unactive').style.display = 'none'
             $('.sort').style.display = 'block'
