--- a/music.html
+++ b/music.html
@@ -138,7 +138,7 @@
         
         .progressnow {
             height: 5px;
-            background: black;
+            background: #4624A1;
             width: 0%;
         }
         
