--- a/music.html
+++ b/music.html
@@ -383,7 +383,8 @@
                     $('.sort ul').getElementsByTagName('p')[i].innerText = res[ind()].name
                 }
             }
-
+             $('.play').classList.remove('fa-puase')
+            $('.play').classList.add('fa-play')
 
         })
 
