--- a/music.html
+++ b/music.html
@@ -503,7 +503,27 @@
 
        time
        
-        window.onclick=window.onmousemove=window.onmousedown=window.onmouseup=window.ondbclick  = function() {
+        window.onclick  = function() {
+           clearInterval(time)
+        time
+
+        }
+        window.ondbclick=function() {
+           clearInterval(time)
+        time
+
+        }
+        window.onmouseup=function() {
+           clearInterval(time)
+        time
+
+        }
+        window.onmousedown=function() {
+           clearInterval(time)
+        time
+
+        }
+        window.onmousemove=function() {
            clearInterval(time)
         time
 
