--- a/music.html
+++ b/music.html
@@ -505,27 +505,27 @@
        
         window.onclick  = function() {
            clearInterval(time)
-        time
+           return time
 
         }
         window.ondbclick=function() {
            clearInterval(time)
-        time
+           return time
 
         }
         window.onmouseup=function() {
            clearInterval(time)
-        time
+       return  time
 
         }
         window.onmousedown=function() {
            clearInterval(time)
-        time
+        return time
 
         }
         window.onmousemove=function() {
            clearInterval(time)
-        time
+           return time
 
         }
         window.onmousemove = function() {
