--- a/music.html
+++ b/music.html
@@ -500,8 +500,8 @@
         }, 10000)
 
 
-
-       time
+        function pingbao(){
+           return time
        
         window.onclick  = function() {
            clearInterval(time)
@@ -528,6 +528,8 @@
            return time
 
         }
+        }
+       pingbao()
         window.onmousemove = function() {
 
             $('.unactive').style.display = 'none'
