--- a/music.html
+++ b/music.html
@@ -503,7 +503,7 @@
         function pingbao(){
            return time
        
-        document.onclick  = function() {
+        $('body').onclick  = function() {
            clearInterval(time)
            return time
 
