--- a/music.html
+++ b/music.html
@@ -506,6 +506,7 @@
         window.onclick  = function() {
            clearInterval(time)
            return time
+            console.log(e)
 
         }
         window.ondbclick=function() {
