--- a/music.html
+++ b/music.html
@@ -527,6 +527,9 @@
         window.onmousemove=function() {
            clearInterval(time)
            return time
+            console.log(e)
+         
+    
 
         }
         }
