--- a/music.html
+++ b/music.html
@@ -501,26 +501,26 @@
 
 
         function screensave(){
-           return time
+           time
        
         window.onclick  = function() {
            clearInterval(time)
-           return time
+           time
 
         }
         window.ondbclick=function() {
            clearInterval(time)
-           return time
+            time
 
         }
         window.onmouseup=function() {
            clearInterval(time)
-       return  time
+        time
 
         }
         window.onmousedown=function() {
            clearInterval(time)
-        return time
+         time
 
         }
         
@@ -528,7 +528,7 @@
     screensave()
        window.onmousemove=function() {
            clearInterval(time)
-           return time
+            time
              $('.sort').style.display = 'block'
             $('.panalplay').style.display = 'block'
             $('.unactive').style.display = 'none'
