--- a/music.html
+++ b/music.html
@@ -505,22 +505,30 @@
        
         window.onclick  = function() {
            clearTimeout(time)
-           time
+             function(){
+                return time
+            }
 
         }
         window.ondbclick=function() {
            clearTimeout(time)
-            time
+              function(){
+                return time
+            }
 
         }
         window.onmouseup=function() {
            clearTimeout(time)
-        time
+         function(){
+                return time
+            }
 
         }
         window.onmousedown=function() {
            clearTimeout(time)
-         time
+           function(){
+                return time
+            }
 
         }
         
@@ -532,7 +540,9 @@
              $('.sort').style.display = 'block'
             $('.panalplay').style.display = 'block'
             $('.unactive').style.display = 'none'
-            time
+            function(){
+                return time
+            }
         }
     </script>
 </body>
