--- a/music.html
+++ b/music.html
@@ -519,7 +519,7 @@
       
       
         window.onmousemove=function(){
-            throttle(face,10000)
+            return throttle(face,10000)
              $('.sort').style.display = 'block'
             $('.panalplay').style.display = 'block'
             $('.unactive').style.display = 'none'
