--- a/music.html
+++ b/music.html
@@ -516,7 +516,7 @@
 
         }
 
-      
+       throttle(face,0)
       
         window.onmousemove= throttle(face,10000)
            //  $('.sort').style.display = 'block'
