--- a/music.html
+++ b/music.html
@@ -508,7 +508,7 @@
       
       
         window.onmousemove= function(){
-            if($('.unactive').style.display == 'block')P{
+            if($('.unactive').style.display == 'block'){
                  $('.sort').style.display = 'block'
                  $('.panalplay').style.display = 'block'
                  $('.unactive').style.display = 'none'
