--- a/music.html
+++ b/music.html
@@ -145,7 +145,7 @@
         .timer {
             position: absolute;
             top: 50%;
-            right: 10%;
+            left: 90%;
             transform: translate(-50%, -50%);
         }
         .timer span{
@@ -256,7 +256,7 @@
         
         .unactive .timer {
             position: absolute;
-            right: 10%;
+            left: 90%;
             display: block;
         }
     </style>
