--- a/music.html
+++ b/music.html
@@ -130,7 +130,7 @@
         }
         
         .progress {
-            width: 70%;
+            width: 75%;
             height: 5px;
             background: cornflowerblue;
             position: absolute;
@@ -148,9 +148,7 @@
             left: 90%;
             transform: translate(-50%, -50%);
         }
-        .timer span{
-            display:inline-block;
-        }
+       
         .title {
             margin-top: 20px;
             font-size: 25px;
@@ -308,7 +306,7 @@
         <span class="fa-random fa"></span>
         <ul>
             <li>
-                <img src="/beijing.jpg" alt="">
+                <img src="/musicAPI/beijing.jpg" alt="">
                 <p>haha</p>
             </li>
             <li>
