--- a/index.html
+++ b/index.html
@@ -448,7 +448,9 @@
         }
         
         .fa-list {
-            color: cadetblue;
+             color: cornflowerblue;
+           
+            text-shadow:0 0 20px #ff6600;
             font-size: 6vh;
             position: absolute;
             z-index: 3;
