--- a/ergai.html
+++ b/ergai.html
@@ -1031,6 +1031,7 @@
                 this.$play = $('.play')
                 this.lyrobj
                 this.timeobj
+                this.isuping
                     //this.remove
                 this.likebox = []
                 this.like = {}
@@ -1059,22 +1060,17 @@
 
 
                 this.$main.find('input').on('keyup', function() {
-                    if ($(this).val()) {
-
-                        self.$main.find('.searchbar ul').html('').css({
+                    setTimeout(self.isuping) 
+                    self.isuping = setTimeout(function(){
+                        if ( self.$main.find('input').val()) {
+                             self.$main.find('.searchbar ul').html('').css({
                             display: 'block'
                         })
+                     var html = '<script ' + 'src=http://sug.music.baidu.com/info/suggestion?format=json&word=' +  self.$main.find('input').val() + '&from=0&callback=mes' + '><\/script>'
+                     $('script').before($(html))
 
-
-                        var html = '<script ' + 'src=http://sug.music.baidu.com/info/suggestion?format=json&word=' + $(this).val() + '&from=0&callback=mes' + '><\/script>'
-                        $('script').before($(html))
-
-
-
-
-                    }
-
-
+                         }
+                    },1000)
                 })
                 this.$main.find('.searchbar button').on('click', function(e) {
                     e.stopPropagation()
