--- a/ergai.html
+++ b/ergai.html
@@ -1282,7 +1282,9 @@
                         self.$main.find('.like ul li').css({
                             width: '7vh'
                         })
-
+                        self.$main.find('.like ul ').css({
+                            left: '5vh'
+                        })
                     }
                 })
 
